<resources>
    <string name="app_name">QR &amp; Barcode Reader</string>
    <string name="scan">Scan</string>
    <string name="generate">Generate</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_result">Scan Result</string>
    <string name="product">Product</string>
    <string name="september_19_2023">September 19, 2023 8:11 PM, EAN_8</string>
    <string name="web_search">Search</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="flash_light">turn on flashlight</string>
    <string name="your_code_will_be_display_here">Your Code will display here</string>
    <string name="enter_your_text_here">Enter Your Text Here..</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="reply_title">Theme</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
</resources>