<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    style="@style/ScreenBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/horizontal_rule"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            style="@style/ImageClose"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/scan_result"
            android:textStyle="bold"
            android:textSize="18sp"
            style="@style/TextColor"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ImageQr"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:textSize="16sp"
                style="@style/TextColor"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/september_19_2023"
                android:textSize="16sp"
                android:textColor="#5D5B61"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/code_img"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:layout_marginTop="30dp"
        style="@style/ImageBar"/>

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="22334455666"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="20sp"
        style="@style/TextColor"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <androidx.cardview.widget.CardView
                android:id="@+id/search"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardBackgroundColor="#1976D2"
                app:cardCornerRadius="30dp"
                android:layout_margin="2dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/search"
                    android:layout_gravity="center"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/web_search"
                style="@style/TextColor"
                android:textSize="12sp"
                android:layout_marginTop="3dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <androidx.cardview.widget.CardView
                android:id="@+id/share"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardBackgroundColor="#388E3C"
                app:cardCornerRadius="30dp"
                android:layout_margin="2dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/share"
                    android:layout_gravity="center"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                style="@style/TextColor"
                android:textSize="12sp"
                android:layout_marginTop="3dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <androidx.cardview.widget.CardView
                android:id="@+id/copy"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardBackgroundColor="#F57C00"
                app:cardCornerRadius="30dp"
                android:layout_margin="2dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/copy"
                    android:layout_gravity="center"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy"
                style="@style/TextColor"
                android:textSize="12sp"
                android:layout_marginTop="3dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>